--- a/palemoon/CLIENT_DATA/files/autoconfig_mozilla.cfg
+++ b/palemoon/CLIENT_DATA/files/autoconfig_mozilla.cfg
@@ -307,7 +307,7 @@ lockPref("network.dns.disableIPv6", true);
 lockPref("noscript.ABE.wanIpCheckURL", "http://my.ip.fi/");
 lockPref("noscript.ABE.notify", false);
 lockPref("noscript.autoAllow", false);
-lockPref("noscript.default", "about:blank about:pocket-signup about:pocket-saved addons.mozilla.org mozilla.net facebook.com github.com google.com gstatic.com ajax.googleapis.com  maps.googleapis.com yahoo.com yimg.com yahooapis.com youtube.com ytimg.com googlevideo.com netflix.com nflxext.com nflximg.com nflxvideo.net maone.net hotmail.com msn.com live.com live.net outlook.com afx.ms gfx.ms sfx.ms wlxrs.com ajax.aspnetcdn.com bootstrapcdn.com code.jquery.com tinymce.cachefly.net");
+lockPref("noscript.default", "about:blank about:pocket-signup about:pocket-saved addons.mozilla.org mozilla.net t-online.de telekom.com notebooksbilliger.de facebook.com github.com google.com gstatic.com ajax.googleapis.com maps.googleapis.com yahoo.com yimg.com yahooapis.com youtube.com ytimg.com googlevideo.com netflix.com nflxext.com nflximg.com nflxvideo.net hotmail.com msn.com live.com live.net outlook.com afx.ms gfx.ms sfx.ms wlxrs.com ajax.aspnetcdn.com bootstrapcdn.com code.jquery.com tinymce.cachefly.net");
 lockPref("noscript.doNotTrack.enabled", true);
 lockPref("noscript.flashPatch", true);
 lockPref("noscript.forbidFrames", true);
